Rename TimedTrigger to Trigger.
