# src/AutoHome.Server/Endpoints/TimeTriggers/Add.AddTimeTriggerResult.cs
@@ -1,6 +1,0 @@
-﻿namespace AutoHome.Server.Endpoints.TimeTriggers;
-
-public class AddTimeTriggerResult : AddTimeTriggerRequest
-{
-    public Guid Id { get; set; }
-}
