# src/AutoHome.Server/Endpoints/Triggers/Add.AddTriggerResult.cs
@@ -1,0 +1,6 @@
+﻿namespace AutoHome.Server.Endpoints.Triggers;
+
+public class AddTriggerResult : AddTriggerRequest
+{
+    public Guid Id { get; set; }
+}
