# src/AutoHome.Server/Endpoints/Triggers/Get.cs
@@ -4,42 +4,42 @@ using AutoMapper;
 using Microsoft.AspNetCore.Mvc;
 using Swashbuckle.AspNetCore.Annotations;
 
-namespace AutoHome.Server.Endpoints.TimeTriggers;
+namespace AutoHome.Server.Endpoints.Triggers;
 
 public class Get : EndpointBaseAsync
     .WithRequest<Guid>
-    .WithActionResult<GetTimeTriggerResult>
+    .WithActionResult<GetTriggerResult>
 {
-    private readonly IAsyncRepository<TimeTrigger> _repository;
+    private readonly IAsyncRepository<Trigger> _repository;
     private readonly IMapper _mapper;
 
     public Get(
-        IAsyncRepository<TimeTrigger> repository,
+        IAsyncRepository<Trigger> repository,
         IMapper mapper)
     {
         _repository = repository;
         _mapper = mapper;
     }
 
-    [HttpGet("api/timetriggers/{id}", Name = "GetTimeTriggers")]
-    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(GetTimeTriggerResult))]
+    [HttpGet("api/triggers/{id}", Name = "GetTriggers")]
+    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(GetTriggerResult))]
     [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(ValidationProblemDetails))]
     [ProducesResponseType(StatusCodes.Status404NotFound, Type = typeof(NotFoundResult))]
     [ProducesResponseType(StatusCodes.Status500InternalServerError)]
     [ProducesJson]
     [SwaggerOperation(
-        Summary = "Gets a time trigger",
-        OperationId = "GetTimeTrigger",
-        Tags = new[] { "Time Triggers" }
+        Summary = "Gets a trigger",
+        OperationId = "GetTrigger",
+        Tags = new[] { "Triggers" }
     )]
-    public override async Task<ActionResult<GetTimeTriggerResult>> HandleAsync(
+    public override async Task<ActionResult<GetTriggerResult>> HandleAsync(
         Guid id, CancellationToken cancellationToken = default)
     {
         var entity = await _repository.GetByIdAsync(id, cancellationToken).ConfigureAwait(false);
 
         if (entity is null) return NotFound(id);
 
-        var result = _mapper.Map<GetTimeTriggerResult>(entity);
+        var result = _mapper.Map<GetTriggerResult>(entity);
 
         return result;
     }
