# src/AutoHome.Server/Endpoints/Triggers/List.ListTriggersResult.cs
@@ -1,6 +1,6 @@
-﻿namespace AutoHome.Server.Endpoints.TimeTriggers;
+﻿namespace AutoHome.Server.Endpoints.Triggers;
 
-public class ListTimeTriggersResult
+public class ListTriggersResult
 {
     public Guid Id { get; set; }
     public Guid DeviceId { get; set; }
